# lonchera

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENT.md  AGENTS.md  CRUSH.md  Dockerfile  LICENSE.md  README.md  SELFHOST.md  alembic.ini  amazon.py  budget_messaging.py  constants.py  deepinfra.py  docker-compose.yml  errors.py  fly.toml  lunch.py  lunch_money_agent.py  main.py  manual_tx.html  manual_tx.py  persistence.py  pyproject.toml  requirements.txt  run_using_docker.sh  telegram_extensions.py  tx_messaging.py  utils.py  web_server.py
.github/: dependabot.yml
.kiro/specs/account-transaction-filtering/: design.md  requirements.md  tasks.md
.kiro/specs/blocked-user-management/: design.md  requirements.md  tasks.md
.kiro/specs/decouple-agent-logic/: design.md  requirements.md  tasks.md
.kiro/specs/migrate-ai-categorization/: design.md  requirements.md  tasks.md
.kiro/steering/: conventions.md  product.md  structure.md  tech.md
.tickets/: lon-flz4.md  lon-p9bh.md
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  a764c4788e16_added_sync_deletion_flag.py
handlers/: admin.py  ai_agent.py  amz.py  analytics.py  audio.py  balances.py  budget.py  categorization.py  expectations.py  general.py  lunch_money_agent.py  lunch_money_agent_core.py  syncing.py  transactions.py
handlers/aitools/: agent_engine.py  test_agent.py  tools.py
handlers/settings/: account_filtering.py  ai.py  general.py  schedule_rendering.py  session.py  transactions_handling.py
